[tool.poetry]
name = "kiwi-functional-tests"
version = "0.1.0"
description = "KIWI openQA functional tests based on the integration tests in OBS"
authors = ["Marcus Schäfer <ms@suse.de>", "Dan Čermák <dcermak@suse.com>"]
license = "GPL-2.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6"
openqa-client = "^4.1"
osc = ">=0.167"
prettytable = ">=2.4.0"

[tool.poetry.dev-dependencies]
black = ">=21.4b0"
mypy = ">=0.812"
lxml-stubs = ">=0.1.1"

[tool.black]
line-length = 79

[tool.mypy]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

