[tool.poetry]
name = "kiwi-functional-tests"
version = "0.1.0"
description = "KIWI openQA functional tests based on the integration tests in OBS"
authors = ["Marcus Schäfer <ms@suse.de>", "Dan Čermák <dcermak@suse.com>"]
license = "GPL-2.0-or-later"
packages = [
    { include = "launcher" },
]

[tool.poetry.dependencies]
python = "^3.10"
openqa-client = "^4.1"
pydantic = "^2.0"

[tool.poetry.dev-dependencies]
black = ">=21.4b0"
mypy = ">=0.812"

[tool.poetry.scripts]
settings = "launcher.settings:main"
schedule_test_run = "launcher.schedule_test_run:main"
monitor = "launcher.running_build:main"
openqa_job = "launcher.openqa:main"

[tool.black]
line-length = 79

[tool.mypy]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
